# pyantz

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: bandit.yml  coverage_badge.yml  mypy.yml  pylint.yml  test.yml
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst
docs/source/_static/: style.css
frontend/pyantz/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
frontend/pyantz/src/: App.css  App.tsx  main.tsx
frontend/pyantz/src/components/: ContextMenu.css  ContextMenu.tsx  FancyJobNode.tsx  JobBoard.tsx  JobList.tsx  JobNode.css  JobNode.tsx  JobOptionsMenu.css  JobOptionsMenu.tsx  JobParameterEditor.css  JobParameterEditor.tsx  JobSelection.tsx  __JobParameterEditor.tsx  jobBoard.css
frontend/pyantz/src/services/: api.ts
frontend/pyantz/src/store/: store.ts
slurm_setup/: .gitignore  start_slurm.sh  start_ssh_commands.sh
src/pyantz/: __init__.py  __main__.py  run.py
src/pyantz/api/: __init__.py  backend.py  dev_server.py  run.py  server.py
src/pyantz/api/data/: __init__.py
src/pyantz/api/endpoints/: __init__.py
src/pyantz/infrastructure/: __init__.py
src/pyantz/infrastructure/config/: __init__.py  abtrast_job.py  anonymize.py  base.py  fn_utils.py  get_functions.py  host_config.py  initial.py  job.py  job_decorators.py  pipeline.py  virtual.py
src/pyantz/infrastructure/core/: __init__.py  job.py  manager.py  mutable_job.py  pipeline.py  status.py  submitter_job.py  variables.py
src/pyantz/infrastructure/distributed_queue/: __init__.py
src/pyantz/infrastructure/log/: __init__.py  multiproc_logging.py
src/pyantz/infrastructure/remotes/: __init__.py  config.py
src/pyantz/infrastructure/runner/: __init__.py  job_manager.py  slurm_runner.py  starter.py
src/pyantz/infrastructure/submitters/: __init__.py  local.py
src/pyantz/infrastructure/virtual/: __init__.py  compile.py
src/pyantz/jobs/: __init__.py  assert_variable.py  change_variable.py  compare.py  copy.py  create_pipelines_from_matrix.py  delete.py  explode_pipeline.py  if_then.py  nop.py  parallel_pipelines.py  restart_pipeline.py  run_script.py  set_variable_from_function.py
src/pyantz/jobs/analysis/: __init__.py  csv_to_parquet.py  external.py  filter_dataframe.py  filter_parquet.py  project_parquet.py  simple.py
src/pyantz/jobs/branch/: __init__.py  compare.py  (+4 more)
src/pyantz/virtual/: __init__.py  add_variable.py  add_variables.py
test/: __init__.py
test/queue/: __init__.py
test/queue/sql/: test_simple_operations.py
tests/: __init__.py  test_run.py
tests/assets/: script.bash  some_exec.py
tests/config/: __init__.py  test_variable_resolution.py  test_virtual_compilation.py
tests/infrastructure/: __init__.py
tests/infrastructure/config/: test_call_validation.py  test_job_configs.py  test_pipeline_configs.py
tests/infrastructure/core/: test_job.py  test_pipeline.py  test_variables.py
tests/infrastructure/hpc/: test_slurm_basic.py
tests/infrastructure/submitters/: test_local_submitter.py
tests/integrated/: __init__.py  test_dependencies.py  test_large_pipeline.py  test_nop.py  test_touch_file.py
tests/integrated/analysis/: test_external.py  test_simple.py
tests/integrated/branching/: __init__.py  test_if_else.py
tests/integration/: __init__.py  test_simple_data_pipeline.py
tests/jobs/: __init__.py  generic_job_tester.py  test_copy.py  test_create_pipelines_from_matrix.py  test_delete.py  test_job_infrastructure.py  test_nop.py  test_restart_pipeline.py  test_run_script.py
tests/jobs/analysis/: test_csv_to_parquet.py  test_filter_dataframe.py  test_filter_parquet.py
tests/jobs/branch/: compare.py  test_compare.py  test_create_pipelines_from_matrix.py  test_explode_pipelines.py  test_if_then.py  test_parallel_pipelines.py
tests/jobs/file/: test_copy.py  test_delete.py  test_edit_json.py  test_make_dirs.py
tests/jobs/files/: __init__.py  test_edit_yaml.py
tests/jobs/variables/: test_assert_variables.py  test_change_variable.py  test_set_variables_from_function.py
tests/queue/sql/: __init__.py  test_simple_operations.py
(+241 files in other folders)
