[project]
name = "pyantz"
version = "0.1.0"
description = "Job runner for small projects"
readme = "README.md"
authors = [
    { name = "igreen1", email = "pyantz@iangreen.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "polars>=1.36.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
]

[project.scripts]
pyantz-dev = "pyantz.api.dev_server:start_dev_server"
pyantz-prod = "pyantz.api.backend:start_prod_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[dependency-groups]
api = [
    "fastapi[standard]>=0.127.0",
]
dev = [
    "autodoc-pydantic>=2.2.0",
    "mypy>=1.17.1",
    "polars[all]>=1.36.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.9",
    "sphinx-book-theme>=1.2.0",
    "ty>=0.0.4",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# Ignore S101 (assert statements) in the "tests" directory and all subdirectories
"tests/**/*.py" = ["S101", "S607", "S603"]
