[project]
name = "pyantz"
dynamic = ["version"]
description = "Job runner for small projects"
readme = "README.md"
authors = [
    { name = "igreen1", email = "pyantz@iangreen.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.127.0",
    "paramiko>=4.0.0",
    "polars>=1.36.1",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.19.1",
    "sqlalchemy>=2.0.42",
]

[project.scripts]
pyantz = "pyantz.__main__:main"
pyantz-dev = "pyantz.api.dev_server:start_dev_server"
pyantz-prod = "pyantz.api.backend:start_prod_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pyantz/__init__.py"

[dependency-groups]
api = [
    "fastapi[standard]>=0.127.0",
]
dev = [
    "autodoc-pydantic>=2.2.0",
    "bandit>=1.9.4",
    "hypothesis>=6.151.10",
    "mypy>=1.17.1",
    "polars[all]>=1.39.3",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.10",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.9",
    "sphinx-book-theme>=1.2.0",
    "ty>=0.0.4",
    "types-docker>=7.1.0.20260402",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# Ignore S101 (assert statements) in the "tests" directory and all subdirectories
"tests/**/*.py" = ["S101", "S607", "S603"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.pylint.main]
ignore-paths = ["^tests/*"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["E0601", "E0602"]

[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/pyantz/__init__.py" = [
    '^__version__ = "{version}"$',
]